refactor and fix up

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,7 @@
     <!-- <meta itemprop="image" content="/internal/images/favicon.ico"> -->
 
     <title>
-      ___ologist
+      luncher
     </title>
 
 
